Add initial workspace model and workspace list endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+# app.db database for development
+app.db
 
+#
+# Automatic gitignore config file:
+#
 # Created by https://www.gitignore.io/api/flask,python,pycharm+all
 # Edit at https://www.gitignore.io/?templates=flask,python,pycharm+all
 
