--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   db:
     build:
       context: ./docker/db
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: pg_password
@@ -30,6 +31,7 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:pg_password@db:5432/quetzal
       FLASK_ENV: development
+      LOG_DIR: /var/log
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
@@ -53,6 +55,7 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:pg_password@db:5432/quetzal
       FLASK_ENV: development
+      LOG_DIR: /var/log
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
