--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       # docker-compose stop.
       # Note that it will be lost after a docker-compose down.
       - /var/lib/postgresql/data
+      - ./logs:/var/log/postgres
     ports:
       # For debugging, sometimes it is useful to open the database port
       - "5432:5432"
@@ -31,7 +32,6 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:pg_password@db:5432/quetzal
       FLASK_ENV: development
-      LOG_DIR: /var/log
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
@@ -55,7 +55,6 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:pg_password@db:5432/quetzal
       FLASK_ENV: development
-      LOG_DIR: /var/log
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
