--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,8 +30,12 @@ services:
       dockerfile: ./docker/app/Dockerfile
     entrypoint: /entrypoint-server.sh
     environment:
-      DATABASE_URL: postgresql://postgres:pg_password@db:5432/quetzal
       FLASK_ENV: development
+      DB_USERNAME: postgres
+      DB_PASSWORD: pg_password
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_DATABASE: quetzal
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
@@ -53,8 +57,12 @@ services:
       dockerfile: ./docker/app/Dockerfile
     entrypoint: /entrypoint-worker.sh
     environment:
-      DATABASE_URL: postgresql://postgres:pg_password@db:5432/quetzal
       FLASK_ENV: development
+      DB_USERNAME: postgres
+      DB_PASSWORD: pg_password
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_DATABASE: quetzal
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
@@ -66,3 +74,28 @@ services:
     depends_on:
       - db
       - rabbitmq
+
+  unittests:
+    build:
+      context: .
+      dockerfile: ./docker/app/Dockerfile
+    entrypoint: py.test -v
+    environment:
+      FLASK_ENV: testing
+      DB_USERNAME: postgres
+      DB_PASSWORD: pg_password
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_DATABASE: unittests
+    volumes:
+      # Setup a volume for development: it allows the web container to have the
+      # latest changes so one does not need to build everytime there is a
+      # modification.
+      - .:/code
+      # The secret files in the configuration are set as a volume, but don't use
+      # it like this on production, use a secret!
+      - ./conf:/code/conf:ro
+    depends_on:
+      - db
+      - rabbitmq
+ 
