Reorganize the basic pytest fixtures for app, db and session

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,6 @@
-pytest
+# pytest has a weird bug/regression on version 4.1.0 that gives
+# "AttributeError: 'Function' object has no attribute 'get_marker'"
+# This will be fixed eventually
+pytest==4.0.2
 pytest-mock
-pytest-flask
+coverage
