--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
     build:
       context: ./docker/rabbitmq
     ports:
+      # For debugging and local test it is useful to open the rabbitmq port
+      - "5672:5672"
       # Optional: exposing the 15672; the rabbitmq web management interface
       - "15672:15672"
 
@@ -81,7 +83,7 @@ services:
       dockerfile: ./docker/app/Dockerfile
     entrypoint: py.test -v
     environment:
-      FLASK_ENV: testing
+      FLASK_ENV: tests
       DB_USERNAME: postgres
       DB_PASSWORD: pg_password
       DB_HOST: db
