Add implementation of file details for json and octet-stream

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # Command line logging
-log_cli = true
+log_cli = false
 log_cli_level = WARNING
 log_format = %(relativeCreated)6d %(levelname)-8s %(name)s.%(funcName)-25s %(lineno)4d %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
