--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,11 +30,12 @@ services:
     build:
       context: .
       dockerfile: ./docker/app/Dockerfile
-    entrypoint: /entrypoint-server.sh
+    entrypoint: flask run --host 0.0.0.0 --port 5000 --no-reload
+    #/entrypoint-server.sh
     environment:
       FLASK_ENV: development
-      DB_USERNAME: postgres
-      DB_PASSWORD: pg_password
+      DB_USERNAME: db_user
+      DB_PASSWORD: db_password
       DB_HOST: db
       DB_PORT: 5432
       DB_DATABASE: quetzal
@@ -60,8 +61,8 @@ services:
     entrypoint: /entrypoint-worker.sh
     environment:
       FLASK_ENV: development
-      DB_USERNAME: postgres
-      DB_PASSWORD: pg_password
+      DB_USERNAME: db_user
+      DB_PASSWORD: db_password
       DB_HOST: db
       DB_PORT: 5432
       DB_DATABASE: quetzal
@@ -81,11 +82,11 @@ services:
     build:
       context: .
       dockerfile: ./docker/app/Dockerfile
-    entrypoint: py.test -o --log_cli=0
+    entrypoint: pytest -q
     environment:
       FLASK_ENV: tests
-      DB_USERNAME: postgres
-      DB_PASSWORD: pg_password
+      DB_USERNAME: db_user
+      DB_PASSWORD: db_password
       DB_HOST: db
       DB_PORT: 5432
       DB_DATABASE: unittests
