--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+  nginx:
+    build:
+      context: ./docker/nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    links:
+      - web
+
   db:
     build:
       context: ./docker/db
@@ -82,7 +91,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/app/Dockerfile
-    entrypoint: pytest -q
+    #entrypoint: pytest -q
+    entrypoint: /bin/true
     environment:
       FLASK_ENV: tests
       DB_USERNAME: db_user
@@ -101,4 +111,4 @@ services:
     depends_on:
       - db
       - rabbitmq
- 
+
