--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2-binary
 sqlparse
 requests
 Click
+syslog-rfc5424-formatter
 
 # Requirements needed for saving data on GCP
 google-cloud-storage
