--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -42,6 +42,17 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
 
+    location /redoc/ {
+        # Redefine the header fields that NGINX sends to the upstream server
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Scheme $scheme;
+
+        # Define the location of the proxy server to send the request to
+        proxy_pass       http://redoc:8000/;
+    }
+
     location / {
         # Redefine the header fields that NGINX sends to the upstream server
         proxy_set_header Host $host;
