--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install -r requirements.txt && \
 
 
 # Add application source code
-COPY config.py wsgi.py openapi.yaml ./
+COPY config.py wsgi.py openapi.yaml init.sh ./
 COPY app ./app
 COPY migrations ./migrations
 
