Improve deployment documentation and cli
Quetzal flask commands have been reorganized into a global sub-command
Also added an *incomplete* nuke command

--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -43,16 +43,16 @@ spec:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: dev-db-secrets
+                  name: stage-db-secrets
                   key: username
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: dev-db-secrets
+                  name: stage-db-secrets
                   key: password
       restartPolicy: Always
       volumes:
         - name: db-data-volume
           gcePersistentDisk:
-            pdName: quetzal-dev-db-volume
+            pdName: quetzal-stage-db-volume
             fsType: ext4
