Relax nginx and gunicorn timeouts

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -43,6 +43,7 @@ server {
     ssl_stapling_verify on;
 
     location / {
+        proxy_read_timeout 1200;
         # Redefine the header fields that NGINX sends to the upstream server
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
