--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,8 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = quetzal/_version.py
-versionfile_build = quetzal/_version.py
+versionfile_source = quetzal/app/_version.py
+versionfile_build = quetzal/app/_version.py
 tag_prefix = v
 parentdir_prefix =
 
