--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,8 @@ versionfile_build = quetzal/app/_version.py
 tag_prefix = v
 parentdir_prefix =
 
+[build_sphinx]
+source-dir = docs/source
+build-dir = docs/build
+all_files = 1
+
