Add persistent volume claims and general reoganization of k8s files
This commit updates the k8s files for a better metadata declaration, usage of
persistent volume claims, and update of the documentation to reflect these new
changes.

By using persistent volume claims, the installation procedure is simpler. But in
order to keep the disks when they are not used (and not be reclaimed and
erased), a specific storage class element needs to be declared as well.

--- a/k8s/rabbitmq-deployment.yaml
+++ b/k8s/rabbitmq-deployment.yaml
@@ -3,22 +3,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq-deployment
+  name: rabbitmq
   labels:
-    name: rabbitmq-pods
+    name: rabbitmq
+    app: quetzal
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: rabbitmq-pods
+      name: rabbitmq
+      app: quetzal
   template:
     metadata:
       labels:
-        name: rabbitmq-pods
+        name: rabbitmq
+        app: quetzal
     spec:
       containers:
         - name: rabbitmq
-          image: gcr.io/dojeda-sandbox/quetzal/rabbitmq:0.1.0
+          image: gcr.io/quetzal-omind/quetzal/rabbitmq:0.1.0
           imagePullPolicy: Always
           ports:
             - containerPort:  5672
