--- a/k8s/nginx-deployment.yaml
+++ b/k8s/nginx-deployment.yaml
@@ -5,20 +5,23 @@ kind: Deployment
 metadata:
   name: nginx-deployment
   labels:
-    name: nginx-pods
+    name: nginx
+    app: quetzal
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: nginx-pods
+      name: nginx
+      app: quetzal
   template:
     metadata:
       labels:
-        name: nginx-pods
+        name: nginx
+        app: quetzal
     spec:
       containers:
         - name: nginx
-          image: gcr.io/dojeda-sandbox/quetzal/nginx:0.1.0
+          image: gcr.io/quetzal-omind/quetzal/nginx:0.1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -27,6 +30,8 @@ spec:
           volumeMounts:
             - mountPath: /etc/nginx/ssl
               name: nginx-secret-files-volume
+            - mountPath: /etc/letsencrypt
+              name: nginx-certbot-storage
           env:
             - name: SERVER_NAMES
               value: "stage.quetz.al"
@@ -39,3 +44,6 @@ spec:
         - name: nginx-secret-files-volume
           secret:
             secretName: stage-nginx-secrets
+        - name: nginx-certbot-storage
+          persistentVolumeClaim:
+            claimName: nginx-pvc
