--- a/k8s/nginx-service.yaml
+++ b/k8s/nginx-service.yaml
@@ -7,7 +7,7 @@ metadata:
   name: nginx
 spec:
   type: LoadBalancer
-  loadBalancerIP: 34.76.151.30
+  loadBalancerIP: 35.240.62.176
   ports:
     - name: http
       port: 80
@@ -18,4 +18,5 @@ spec:
       targetPort: 443
       protocol: TCP
   selector:
-    name: nginx-pods
+    name: nginx
+    app: quetzal
