--- a/k8s/web-deployment.yaml
+++ b/k8s/web-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: gcr.io/quetzal-omind/quetzal/app:0.1.0
+          image: gcr.io/quetzal/quetzal/app:0.1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
