--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: gcr.io/quetzal-omind/quetzal/app:0.1.0
+          image: gcr.io/quetzal/quetzal/app:0.1.0
           imagePullPolicy: Always
           command:
             - /entrypoint-worker.sh
