--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: worker-deployment
+  name: worker
   labels:
     name: worker
     app: quetzal
@@ -33,15 +33,30 @@ spec:
               name: app-secret-files-volume
           env:
             - name: SERVER_NAME
-              value: stage.quetz.al
+              valueFrom:
+                configMapKeyRef:
+                  name: app-configmap
+                  key: server_name
             - name: FLASK_ENV
-              value: staging
+              valueFrom:
+                configMapKeyRef:
+                  name: app-configmap
+                  key: flask_env
             - name: QUETZAL_ADMIN_MAIL
-              value: quetzal.api@gmail.com
+              valueFrom:
+                configMapKeyRef:
+                  name: app-configmap
+                  key: admin_mail
             - name: QUETZAL_GCP_DATA_BUCKET
-              value: gs://quetzal-stage-data
+              valueFrom:
+                configMapKeyRef:
+                  name: app-configmap
+                  key: data_bucket
             - name: QUETZAL_GCP_BACKUP_BUCKET
-              value: gs://quetzal-stage-backups
+              valueFrom:
+                configMapKeyRef:
+                  name: app-configmap
+                  key: backup_bucket
             - name: DB_HOST
               value: db
             - name: DB_PORT
