--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -21,13 +21,17 @@ spec:
     spec:
       containers:
         - name: db
-          image: gcr.io/quetzal/quetzal/db:0.1.0
+          image: gcr.io/quetzal/quetzal/db:0.2.0
           imagePullPolicy: Always
           ports:
             - containerPort: 5432
           resources:
             requests:
-              cpu: 500m
+              memory: "128Mi"
+              cpu: "250m"
+            limits:
+              memory: "4Gi"
+              cpu: "1000m"
           volumeMounts:
             - mountPath: /srv/data
               name: db-data-volume
