--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -23,11 +23,17 @@ spec:
     spec:
       containers:
         - name: worker
-          image: gcr.io/quetzal/quetzal/app:0.1.0
+          image: gcr.io/quetzal/quetzal/app:0.2.0
           imagePullPolicy: Always
           command:
             - /entrypoint-worker.sh
-          resources: {}
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "4Gi"
+              cpu: "1000m"
           volumeMounts:
             - mountPath: /code/conf
               name: app-secret-files-volume
