Enable certbot on nginx deployment

--- a/k8s/nginx-deployment.yaml
+++ b/k8s/nginx-deployment.yaml
@@ -43,8 +43,9 @@ spec:
                 configMapKeyRef:
                   name: app-configmap
                   key: admin_mail
-            - name: DISABLE_CERTBOT
-              value: "1"
+            # Uncomment this to disable CA certbot
+            # - name: DISABLE_CERTBOT
+            #   value: "1"
       restartPolicy: Always
       volumes:
         - name: nginx-secret-files-volume
