--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -27,8 +27,8 @@ server {
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
-    ssl_stapling on;
-    ssl_stapling_verify on;
+    #ssl_stapling on;
+    #ssl_stapling_verify on;
 
     location / {
         proxy_read_timeout 1200;
