--- a/helm/quetzal/templates/app-service.yaml
+++ b/helm/quetzal/templates/app-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: db
+  name: app
   labels:
-    app.kubernetes.io/component: database
+    app.kubernetes.io/component: app
 {{ include "quetzal.labels" . | indent 4 }}
 spec:
   type: ClusterIP
@@ -15,4 +15,4 @@ spec:
   selector:
     app.kubernetes.io/name: {{ include "quetzal.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: database
+    app.kubernetes.io/component: app
