--- a/helm/quetzal/templates/worker-hpa.yaml
+++ b/helm/quetzal/templates/worker-hpa.yaml
@@ -1,9 +1,9 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "quetzal.fullname" . }}-app-hpa
+  name: {{ include "quetzal.fullname" . }}-worker-hpa
   labels:
-    app.kubernetes.io/component: app
+    app.kubernetes.io/component: worker
 {{ include "quetzal.labels" . | indent 4}}
 spec:
     minReplicas: 1
@@ -11,5 +11,5 @@ spec:
     scaleTargetRef:
       apiVersion: extensions/v1beta1
       kind: Deployment
-      name: {{ include "quetzal.fullname" . }}-app
+      name: {{ include "quetzal.fullname" . }}-worker
     targetCPUUtilizationPercentage: 50
