Add modifications needed after trying to reproduce the installation

--- a/helm/quetzal/templates/app-secrets.yaml
+++ b/helm/quetzal/templates/app-secrets.yaml
@@ -7,4 +7,4 @@ metadata:
 {{ include "quetzal.labels" . | indent 4 }}
 type: Opaque
 stringData:
-  secret_key: {{ required "A valid .Values.app.secret_key is required!" .Values.app.secret_key | quote }}
+  flask_secret_key: {{ required "A valid .Values.app.flaskSecretKey is required!" .Values.app.flaskSecretKey | quote }}
