--- a/helm/quetzal/templates/app-deployment.yaml
+++ b/helm/quetzal/templates/app-deployment.yaml
@@ -29,6 +29,12 @@ spec:
             - name: flask
               containerPort: 5000
               protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 5000
+            initialDelaySeconds: 15
+            periodSeconds: 15
           resources:
             {{- toYaml .Values.app.resources | nindent 12 }}
           volumeMounts:
@@ -36,11 +42,11 @@ spec:
               name: app-secret-files-volume
           env:
             - name: SERVER_NAME
-              value: {{ .Values.app.server_name | quote }}
+              value: {{ .Values.general.serverName | quote }}
             - name: FLASK_ENV
               value: {{ .Values.app.flask_env | quote }}
             - name: QUETZAL_ADMIN_MAIL
-              value: {{ .Values.app.admin_mail | quote }}
+              value: {{ .Values.general.adminMail | quote }}
             - name: QUETZAL_GCP_DATA_BUCKET
               value: {{ .Values.app.data_bucket | quote }}
             - name: QUETZAL_GCP_BACKUP_BUCKET
@@ -73,7 +79,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ include "quetzal.fullname" . }}-app-secrets
-                  key: secret_key
+                  key: flask_secret_key
       restartPolicy: Always
       volumes:
         - name: app-secret-files-volume
